# PrompForge

./: .env  CLAUDE.md  DOCKER_GUIDE.md  Dockerfile.web  LICENSE  Launcher.bat  Makefile  README.md  SOURCES_METHODOLOGY.md  Start.bat  docker-compose.amd-max.yml  docker-compose.amd.yml  docker-compose.cpu.yml  docker-compose.win-amd.yml  docker-compose.win-nvidia.yml  docker-compose.yml  launcher.ps1  launcher.py  launcher.sh  pyproject.toml  run-web.bat  run-web.ps1  run-web.sh  setup-amd-windows.ps1  start-amd.ps1  start-nvidia.ps1  start.py  start.sh  update.ps1  update.sh
.claude/: settings.local.json
assets/: README.md
data/projects/: eventmigo.md  eventmigo2.md  exemple-webapp.md  promtpforge.md
docs/: STRUCTURE.md
promptforge/: __init__.py  cli.py  core.py  logging_config.py  profiles.py  providers.py  scanner.py  security.py  starter_templates.py  tokens.py  update_ollama.py  web.py
promptforge/web/: __init__.py  analysis.py  assets.py  interface.py  ollama_helpers.py  (+6 more)
scripts/: .gitignore  Dockerfile  Dockerfile.web  Makefile  README.md  build.py  docker-compose.cpu.yml  docker-compose.yml  docker-run.sh  generate_icons.py  pyproject.toml  run.ps1
scripts/projects/: exemple-webapp.md
scripts/promptforge/: __init__.py  cli.py  core.py  database.py  profiles.py  providers.py  utils.py  web.py
scripts/scripts/: docker_helper.py
scripts/templates/: PROJECT_GENERATOR_PROMPT.md
scripts/tests/: conftest.py  test_cli.py  test_core.py  test_database.py  test_providers.py
tests/: __init__.py  run_quick_tests.py  test_game_changer.py  test_integration.py  test_launcher.py  test_ollama_integration.py  test_onboarding.py  test_providers.py  test_real_value.py  test_scanner.py  test_scanner_ecosystems.py  test_security.py  test_security_frameworks.py
(+11 files in other folders)
