[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptforge"
version = "0.1.0"
description = "Reformateur intelligent de prompts avec contexte projet - 100% local avec Ollama"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PromptForge Contributors"}
]
keywords = ["prompt", "llm", "ollama", "ai", "formatting", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
web = [
    "gradio>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]
all = [
    "promptforge[web,dev]",
]

[project.scripts]
promptforge = "promptforge.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/promptforge"
Repository = "https://github.com/yourusername/promptforge"
Issues = "https://github.com/yourusername/promptforge/issues"

[tool.setuptools.packages.find]
include = ["promptforge*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
